rename utilities, fix YOI js core, update docs

--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -51,7 +51,7 @@
                 {% include pagefooter.html %}
             </article>
         </div>
-        <footer class="center flexGrid tc-gray-18 m-tb-15">
+        <footer class="center flexGrid c-gray-18 m-tb-15">
             <div class="w-1-2">YOI – the Yoshino Frontend Component Library.</div>
             <div class="w-1-2 al-r"><a href="http://yoshino.digital">Yoshino.digital GmbH</a></div>
         </footer>
