--- a/src/components/code/code.less
+++ b/src/components/code/code.less
@@ -117,7 +117,7 @@ p, td, li {
     .c   { color: @gray-15; }
     //.err { background: @red-10; color: @white; }
     .k   { color: @purple-12; }
-    .l   { color: @yellow-15; }
+    .l   { color: @yellow-13; }
     .n   { color: @gray-15; }
     .o   { color: @gray-10; }
     .p   { color: @gray-15; }
@@ -139,11 +139,11 @@ p, td, li {
     .kr  { color: @purple-12; }
     .kt  { color: @yellow-18; }
     .ld  { color: @green-15; }
-    .m   { color: @yellow-15; }
+    .m   { color: @yellow-13; }
     .s   { color: @yellow-13; }
     .na  { color: @blue-11; }
     .nb  { color: @blue-11; }
-    .nc  { color: @yellow-18; }
+    .nc  { color: @red-18; }
     .no  { color: @yellow-18; }
     .nd  { color: @green-13; }
     .ni  { color: @gray-10; }
@@ -157,17 +157,17 @@ p, td, li {
     .nv  { color: @red-15; }
     .ow  { color: @green-13; }
     .w   { color: @gray-10; }
-    .mf  { color: @yellow-15; }
-    .mh  { color: @yellow-15; }
-    .mi  { color: @yellow-15; }
-    .mo  { color: @yellow-15; }
+    .mf  { color: @yellow-13; }
+    .mh  { color: @yellow-13; }
+    .mi  { color: @yellow-13; }
+    .mo  { color: @yellow-13; }
     .sb  { color: @green-15; }
     .sc  { color: @gray-10; }
     .sd  { color: @gray-15; }
     .s2  { color: @green-15; }
-    .se  { color: @yellow-15; }
+    .se  { color: @yellow-13; }
     .sh  { color: @green-15; }
-    .si  { color: @yellow-15; }
+    .si  { color: @yellow-13; }
     .sx  { color: @green-15; }
     .sr  { color: @green-15; }
     .s1  { color: @green-15; }
@@ -176,5 +176,5 @@ p, td, li {
     .vc  { color: @red-15; }
     .vg  { color: @red-15; }
     .vi  { color: @red-15; }
-    .il  { color: @yellow-15; }
+    .il  { color: @yellow-13; }
 }
