--- a/src/less/utilities/color-interactive.less
+++ b/src/less/utilities/color-interactive.less
@@ -22,20 +22,20 @@
     
     // semantic text colors
 
-    .hvr--tc-attention-@{i}:hover { color: ~"@{color-attention-@{i}}" !important; }
-    .hvr--tc-base-@{i}:hover      { color: ~"@{color-base-@{i}}" !important; }
-    .hvr--tc-negative-@{i}:hover  { color: ~"@{color-negative-@{i}}" !important; }
-    .hvr--tc-positive-@{i}:hover  { color: ~"@{color-positive-@{i}}" !important; }
-    .hvr--tc-primary-@{i}:hover   { color: ~"@{color-primary-@{i}}" !important; }
+    .hvr--c-attention-@{i}:hover { color: ~"@{color-attention-@{i}}" !important; }
+    .hvr--c-base-@{i}:hover      { color: ~"@{color-base-@{i}}" !important; }
+    .hvr--c-negative-@{i}:hover  { color: ~"@{color-negative-@{i}}" !important; }
+    .hvr--c-positive-@{i}:hover  { color: ~"@{color-positive-@{i}}" !important; }
+    .hvr--c-primary-@{i}:hover   { color: ~"@{color-primary-@{i}}" !important; }
     
     // additional text colors
     
-    .hvr--tc-blue-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{blue-@{i}}" !important; }
-    .hvr--tc-gray-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{gray-@{i}}" !important; }
-    .hvr--tc-green-@{i}:hover when (@fullColorPalette = true)  { color: ~"@{green-@{i}}" !important; }
-    .hvr--tc-purple-@{i}:hover when (@fullColorPalette = true) { color: ~"@{purple-@{i}}" !important; }
-    .hvr--tc-red-@{i}:hover when (@fullColorPalette = true)    { color: ~"@{red-@{i}}" !important; }
-    .hvr--tc-yellow-@{i}:hover when (@fullColorPalette = true) { color: ~"@{yellow-@{i}}" !important; }
+    .hvr--c-blue-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{blue-@{i}}" !important; }
+    .hvr--c-gray-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{gray-@{i}}" !important; }
+    .hvr--c-green-@{i}:hover when (@fullColorPalette = true)  { color: ~"@{green-@{i}}" !important; }
+    .hvr--c-purple-@{i}:hover when (@fullColorPalette = true) { color: ~"@{purple-@{i}}" !important; }
+    .hvr--c-red-@{i}:hover when (@fullColorPalette = true)    { color: ~"@{red-@{i}}" !important; }
+    .hvr--c-yellow-@{i}:hover when (@fullColorPalette = true) { color: ~"@{yellow-@{i}}" !important; }
     
     // semantic border colors
 
@@ -64,8 +64,8 @@
 
 // achromatic text colors
 
-.hvr--tc-transparent:hover { .tc-transparent; }
-.hvr--tc-white:hover       { .tc-white; }
+.hvr--c-transparent:hover { .c-transparent; }
+.hvr--c-white:hover       { .c-white; }
 
 // achromatic border colors
 
