--- a/src/less/utilities/cursor.less
+++ b/src/less/utilities/cursor.less
@@ -1,37 +1,37 @@
 /** cursor */
 
-.crsr-alias   { cursor: alias !important; }
-.crsr-ascrl   { cursor: all-scroll !important; }
-.crsr-auto    { cursor: auto !important; }
-.crsr-cell    { cursor: cell !important; }
-.crsr-cntxt   { cursor: context-menu !important; }
-.crsr-copy    { cursor: copy !important; }
-.crsr-crshr   { cursor: crosshair !important; }
-.crsr-deflt   { cursor: default !important; }
-.crsr-ersz    { cursor: e-resize !important; }
-.crsr-ewrsz   { cursor: ew-resize !important; }
-.crsr-gbng    { cursor: grabbing !important; }
-.crsr-grab    { cursor: grab !important; }
-.crsr-move    { cursor: move !important; }
-.crsr-nalwd   { cursor: not-allowed !important; }
-.crsr-ndrp    { cursor: no-drop !important; }
-.crsr-nersz   { cursor: ne-resize !important; }
-.crsr-neswrsz { cursor: nesw-resize !important; }
-.crsr-none    { cursor: none !important; }
-.crsr-nrsz    { cursor: n-resize !important; }
-.crsr-nsrsz   { cursor: ns-resize !important; }
-.crsr-nwrsz   { cursor: nw-resize !important; }
-.crsr-nwsersz { cursor: nwse-resize !important; }
-.crsr-pntr    { cursor: pointer !important; }
-.crsr-prgrs   { cursor: progress !important; }
-.crsr-rsz     { cursor: resize !important; }
-.crsr-rwrsz   { cursor: row-resize !important; }
-.crsr-sersz   { cursor: se-resize !important; }
-.crsr-srsz    { cursor: s-resize !important; }
-.crsr-swrsz   { cursor: sw-resize !important; }
-.crsr-txt     { cursor: text !important; }
-.crsr-vtxt    { cursor: vertical-text !important; }
-.crsr-wait    { cursor: wait !important; }
-.crsr-wrsz    { cursor: w-resize !important; }
-.crsr-zmin    { cursor: zoom-in !important; }
-.crsr-zmot    { cursor: zoom-out !important; }
+.crsr-alias        { cursor: alias !important; }
+.crsr-allscroll    { cursor: all-scroll !important; }
+.crsr-auto         { cursor: auto !important; }
+.crsr-cell         { cursor: cell !important; }
+.crsr-contextmenu  { cursor: context-menu !important; }
+.crsr-copy         { cursor: copy !important; }
+.crsr-crosshair    { cursor: crosshair !important; }
+.crsr-default      { cursor: default !important; }
+.crsr-eresize      { cursor: e-resize !important; }
+.crsr-ewresize     { cursor: ew-resize !important; }
+.crsr-grabbing     { cursor: grabbing !important; }
+.crsr-grab         { cursor: grab !important; }
+.crsr-move         { cursor: move !important; }
+.crsr-notallowed   { cursor: not-allowed !important; }
+.crsr-nodrop       { cursor: no-drop !important; }
+.crsr-neresize     { cursor: ne-resize !important; }
+.crsr-neswresize   { cursor: nesw-resize !important; }
+.crsr-none         { cursor: none !important; }
+.crsr-nresize      { cursor: n-resize !important; }
+.crsr-nsresize     { cursor: ns-resize !important; }
+.crsr-nwresize     { cursor: nw-resize !important; }
+.crsr-nwseresize   { cursor: nwse-resize !important; }
+.crsr-pointer      { cursor: pointer !important; }
+.crsr-progress     { cursor: progress !important; }
+.crsr-resize       { cursor: resize !important; }
+.crsr-rowresize    { cursor: row-resize !important; }
+.crsr-seresize     { cursor: se-resize !important; }
+.crsr-sresize      { cursor: s-resize !important; }
+.crsr-swresize     { cursor: sw-resize !important; }
+.crsr-text         { cursor: text !important; }
+.crsr-verticaltext { cursor: vertical-text !important; }
+.crsr-wait         { cursor: wait !important; }
+.crsr-wresize      { cursor: w-resize !important; }
+.crsr-zoomin       { cursor: zoom-in !important; }
+.crsr-zoomout      { cursor: zoom-out !important; }
