--- a/src/less/utilities/layout-responsive.less
+++ b/src/less/utilities/layout-responsive.less
@@ -4,16 +4,16 @@
     
     // display
 
-    .@{bpPrefix}--d-inl    { .d-inl; }
-    .@{bpPrefix}--d-blk    { .d-blk; }
-    .@{bpPrefix}--d-inlblk { .d-inlblk; }
+    .@{bpPrefix}--d-inline      { .d-inline; }
+    .@{bpPrefix}--d-block       { .d-block; }
+    .@{bpPrefix}--d-inlineblock { .d-inlineblock; }
 
     // position type
 
-    .@{bpPrefix}--pos-abs  { .pos-abs; }
-    .@{bpPrefix}--pos-rel  { .pos-rel; }
-    .@{bpPrefix}--pos-fix  { .pos-fix; }
-    .@{bpPrefix}--pos-stc  { .pos-stc; }
+    .@{bpPrefix}--pos-absolute { .pos-absolute; }
+    .@{bpPrefix}--pos-relative { .pos-relative; }
+    .@{bpPrefix}--pos-fixed    { .pos-fixed; }
+    .@{bpPrefix}--pos-static   { .pos-static; }
 
     // absolute positioning
 
@@ -28,14 +28,14 @@
     
     // fixed positioning
 
-    .@{bpPrefix}--pos-fix-t  { .pos-fix-t;  }
-    .@{bpPrefix}--pos-fix-r  { .pos-fix-r;  }
-    .@{bpPrefix}--pos-fix-b  { .pos-fix-b;  }
-    .@{bpPrefix}--pos-fix-l  { .pos-fix-l;  }
-    .@{bpPrefix}--pos-fix-tl { .pos-fix-tl; }
-    .@{bpPrefix}--pos-fix-tr { .pos-fix-tr; }
-    .@{bpPrefix}--pos-fix-br { .pos-fix-br; }
-    .@{bpPrefix}--pos-fix-bl { .pos-fix-bl; }
+    .@{bpPrefix}--pos-fixed-t  { .pos-fixed-t;  }
+    .@{bpPrefix}--pos-fixed-r  { .pos-fixed-r;  }
+    .@{bpPrefix}--pos-fixed-b  { .pos-fixed-b;  }
+    .@{bpPrefix}--pos-fixed-l  { .pos-fixed-l;  }
+    .@{bpPrefix}--pos-fixed-tl { .pos-fixed-tl; }
+    .@{bpPrefix}--pos-fixed-tr { .pos-fixed-tr; }
+    .@{bpPrefix}--pos-fixed-br { .pos-fixed-br; }
+    .@{bpPrefix}--pos-fixed-bl { .pos-fixed-bl; }
 
     // position utilities for micro layout fixes
 
@@ -83,10 +83,10 @@
 
     // overflow
 
-    .@{bpPrefix}--ovrfl-x-hide  { .ovrfl-x-hidden }
-    .@{bpPrefix}--ovrfl-y-hide  { .ovrfl-y-hidden; }
-    .@{bpPrefix}--ovrfl-hidden  { .ovrfl-hidden; }
-    .@{bpPrefix}--ovrfl-visible { .ovrfl-visible; }
+    .@{bpPrefix}--ovrfl-x-hidden { .ovrfl-x-hidden }
+    .@{bpPrefix}--ovrfl-y-hidden { .ovrfl-y-hidden; }
+    .@{bpPrefix}--ovrfl-hidden   { .ovrfl-hidden; }
+    .@{bpPrefix}--ovrfl-visible  { .ovrfl-visible; }
 
     // z-index
 
