--- a/src/less/utilities/typography-base.less
+++ b/src/less/utilities/typography-base.less
@@ -37,9 +37,9 @@
 
 // font family
 
-.ff-sr   { font-family: @font-serif !important; }
-.ff-ss   { font-family: @font-sansserif !important; }
-.ff-mono { font-family: @font-mono !important; }
+.ff-serif { font-family: @font-serif !important; }
+.ff-sans  { font-family: @font-sansserif !important; }
+.ff-mono  { font-family: @font-mono !important; }
 
 // font weight
 
@@ -48,15 +48,15 @@
 
 // font style
 
-.fst-no { font-style: normal !important; }
-.fst-it { font-style: italic !important; }
+.fst-none   { font-style: normal !important; }
+.fst-italic { font-style: italic !important; }
 
 // text transform
 
-.tt-cp   { text-transform: capitalize !important; }
-.tt-lc   { text-transform: lowercase !important; }
-.tt-none { text-transform: none !important; }
-.tt-uc   { text-transform: uppercase !important; }
+.tt-capitalize { text-transform: capitalize !important; }
+.tt-lowercase  { text-transform: lowercase !important; }
+.tt-none       { text-transform: none !important; }
+.tt-uppercase  { text-transform: uppercase !important; }
 
 // text alignment
 
@@ -70,8 +70,8 @@
 
 // text decoration
 
-.tdcr-none { text-decoration: none !important; }
-.tdcr-undl { text-decoration: underline !important; }
+.tdcr-none      { text-decoration: none !important; }
+.tdcr-underline { text-decoration: underline !important; }
 
 // list styles
 
