--- a/src/less/utilities/typography-interactive.less
+++ b/src/less/utilities/typography-interactive.less
@@ -1,4 +1,4 @@
 /** typography-interactive.less */
 
-.hvr--tdcr-none:hover { .tdcr-none; }
-.hvr--tdcr-undl:hover { .tdcr-undl; }
+.hvr--tdcr-none:hover      { .tdcr-none; }
+.hvr--tdcr-underline:hover { .tdcr-underline; }
