--- a/src/less/utilities/visibility-base.less
+++ b/src/less/utilities/visibility-base.less
@@ -1,7 +1,7 @@
 /** visibility-base.less */
 
-.vis-vis { visibility: visible !important; }
-.vis-hid { visibility: hidden !important; }
+.vis-visible { visibility: visible !important; }
+.vis-hidden  { visibility: hidden !important; }
 
 .visible {}
 .hidden  { .mixin-hide !important; }
