--- a/src/less/core/root.less
+++ b/src/less/core/root.less
@@ -11,3 +11,10 @@ body {
     background: @bodyBackgroundColor;
     color: @textColor;
 }
+
+//
+
+::selection {
+    background: @color-primary-15;
+    color: @color-white;
+}
