clean up utility names, add responsive tables, refine typography

--- a/src/components/article/article.less
+++ b/src/components/article/article.less
@@ -5,6 +5,10 @@
     // increased line-height
     
     line-height: 1.75;
+    
+    // numbers
+    
+    font-variant-numeric: oldstyle-nums diagonal-fractions;
 
     // headlines
 
