--- a/src/less/utilities/cursor.less
+++ b/src/less/utilities/cursor.less
@@ -1,37 +1,37 @@
 /** cursor */
 
-.crsr-alias        { cursor: alias !important; }
-.crsr-allscroll    { cursor: all-scroll !important; }
-.crsr-auto         { cursor: auto !important; }
-.crsr-cell         { cursor: cell !important; }
-.crsr-contextmenu  { cursor: context-menu !important; }
-.crsr-copy         { cursor: copy !important; }
-.crsr-crosshair    { cursor: crosshair !important; }
-.crsr-default      { cursor: default !important; }
-.crsr-eresize      { cursor: e-resize !important; }
-.crsr-ewresize     { cursor: ew-resize !important; }
-.crsr-grabbing     { cursor: grabbing !important; }
-.crsr-grab         { cursor: grab !important; }
-.crsr-move         { cursor: move !important; }
-.crsr-notallowed   { cursor: not-allowed !important; }
-.crsr-nodrop       { cursor: no-drop !important; }
-.crsr-neresize     { cursor: ne-resize !important; }
-.crsr-neswresize   { cursor: nesw-resize !important; }
-.crsr-none         { cursor: none !important; }
-.crsr-nresize      { cursor: n-resize !important; }
-.crsr-nsresize     { cursor: ns-resize !important; }
-.crsr-nwresize     { cursor: nw-resize !important; }
-.crsr-nwseresize   { cursor: nwse-resize !important; }
-.crsr-pointer      { cursor: pointer !important; }
-.crsr-progress     { cursor: progress !important; }
-.crsr-resize       { cursor: resize !important; }
-.crsr-rowresize    { cursor: row-resize !important; }
-.crsr-seresize     { cursor: se-resize !important; }
-.crsr-sresize      { cursor: s-resize !important; }
-.crsr-swresize     { cursor: sw-resize !important; }
-.crsr-text         { cursor: text !important; }
-.crsr-verticaltext { cursor: vertical-text !important; }
-.crsr-wait         { cursor: wait !important; }
-.crsr-wresize      { cursor: w-resize !important; }
-.crsr-zoomin       { cursor: zoom-in !important; }
-.crsr-zoomout      { cursor: zoom-out !important; }
+.crs-alias        { cursor: alias !important; }
+.crs-allscroll    { cursor: all-scroll !important; }
+.crs-auto         { cursor: auto !important; }
+.crs-cell         { cursor: cell !important; }
+.crs-contextmenu  { cursor: context-menu !important; }
+.crs-copy         { cursor: copy !important; }
+.crs-crosshair    { cursor: crosshair !important; }
+.crs-default      { cursor: default !important; }
+.crs-eresize      { cursor: e-resize !important; }
+.crs-ewresize     { cursor: ew-resize !important; }
+.crs-grabbing     { cursor: grabbing !important; }
+.crs-grab         { cursor: grab !important; }
+.crs-move         { cursor: move !important; }
+.crs-notallowed   { cursor: not-allowed !important; }
+.crs-nodrop       { cursor: no-drop !important; }
+.crs-neresize     { cursor: ne-resize !important; }
+.crs-neswresize   { cursor: nesw-resize !important; }
+.crs-none         { cursor: none !important; }
+.crs-nresize      { cursor: n-resize !important; }
+.crs-nsresize     { cursor: ns-resize !important; }
+.crs-nwresize     { cursor: nw-resize !important; }
+.crs-nwseresize   { cursor: nwse-resize !important; }
+.crs-pointer      { cursor: pointer !important; }
+.crs-progress     { cursor: progress !important; }
+.crs-resize       { cursor: resize !important; }
+.crs-rowresize    { cursor: row-resize !important; }
+.crs-seresize     { cursor: se-resize !important; }
+.crs-sresize      { cursor: s-resize !important; }
+.crs-swresize     { cursor: sw-resize !important; }
+.crs-text         { cursor: text !important; }
+.crs-verticaltext { cursor: vertical-text !important; }
+.crs-wait         { cursor: wait !important; }
+.crs-wresize      { cursor: w-resize !important; }
+.crs-zoomin       { cursor: zoom-in !important; }
+.crs-zoomout      { cursor: zoom-out !important; }
