--- a/src/less/utilities/grid-base.less
+++ b/src/less/utilities/grid-base.less
@@ -51,18 +51,19 @@
 
 // flex layout
 
-.flex-wrap                   { flex-wrap: wrap !important; }
-.flex-noWrap                 { flex-wrap: nowrap !important; }
-.flex-wrapReverse            { flex-wrap: wrap-reverse !important; }
+.flx                        { display: flex !important; }
+.flx-wrap                   { flex-wrap: wrap !important; }
+.flx-noWrap                 { flex-wrap: nowrap !important; }
+.flx-wrapReverse            { flex-wrap: wrap-reverse !important; }
                               
-.flex-directionRow           { flex-direction: row !important; }
-.flex-directionRowReverse    { flex-direction: row-reverse !important; }
-.flex-directionColumn        { flex-direction: column !important; }
-.flex-directionColumnReverse { flex-direction: column-reverse !important; }
+.flx-directionRow           { flex-direction: row !important; }
+.flx-directionRowReverse    { flex-direction: row-reverse !important; }
+.flx-directionColumn        { flex-direction: column !important; }
+.flx-directionColumnReverse { flex-direction: column-reverse !important; }
 
-.flex-alignStart { align-items: flex-start !important; }
+.flx-alignStart { align-items: flex-start !important; }
 
-.flex-alignEnd {
+.flx-alignEnd {
     
     align-items: flex-end !important;
     
@@ -76,7 +77,7 @@
     
 }
 
-.flex-alignCenter {
+.flx-alignCenter {
     
     align-items: center !important;
     
@@ -90,7 +91,7 @@
     
 }
 
-.flex-alignBaseline {
+.flx-alignBaseline {
     
     align-items: baseline !important;
     
@@ -104,9 +105,9 @@
     
 }
 
-.flex-alignContentStart { align-content: flex-start !important; }
+.flx-alignContentStart { align-content: flex-start !important; }
 
-.flex-alignContentEnd {
+.flx-alignContentEnd {
     
     align-content: flex-end !important;
     
@@ -120,33 +121,33 @@
     
 }
 
-.flex-alignContentCenter        { align-content: center !important; }
-.flex-alignContentSpaceBetween  { align-content: space-between !important; }
-.flex-alignContentSpaceAround   { align-content: space-around !important; }
-.flex-alignSelfStretch          { align-self: stretch !important; }
-.flex-alignSelfStart            { align-self: flex-start !important; }
+.flx-alignContentCenter        { align-content: center !important; }
+.flx-alignContentSpaceBetween  { align-content: space-between !important; }
+.flx-alignContentSpaceAround   { align-content: space-around !important; }
+.flx-alignSelfStretch          { align-self: stretch !important; }
+.flx-alignSelfStart            { align-self: flex-start !important; }
 
-.flex-alignSelfEnd {
+.flx-alignSelfEnd {
     align-self: flex-end !important;
     vertical-align: bottom !important;
 }
 
-.flex-alignSelfCenter {
+.flx-alignSelfCenter {
     align-self: center !important;
     vertical-align: middle !important;
 }
 
-.flex-alignSelfBaseline {
+.flx-alignSelfBaseline {
     align-self: baseline !important;
     vertical-align: baseline !important;
 }
 
-.flex-justifyStart {
+.flx-justifyStart {
     text-align: left !important;
     justify-content: flex-start !important;
 }
 
-.flex-justifyEnd {
+.flx-justifyEnd {
     
     text-align: right !important;
     text-align-last: right !important;
@@ -168,7 +169,7 @@
 }
 
 
-.flex-justifyCenter {
+.flx-justifyCenter {
     
     text-align: center !important;
     text-align-last: center !important;
@@ -189,7 +190,7 @@
     
 }
 
-.flex-justifySpaceBetween {
+.flx-justifySpaceBetween {
     
     text-align: justify !important;
     text-align-last: justify !important;
@@ -209,7 +210,7 @@
     }
 }
 
-.flex-justifySpaceAround {
+.flx-justifySpaceAround {
     
     text-align: justify !important;
     text-align-last: justify !important;
@@ -231,13 +232,13 @@
 
 // flex order
 
-.flex-1  { order: 1; }
-.flex-2  { order: 2; }
-.flex-3  { order: 3; }
-.flex-4  { order: 4; }
-.flex-5  { order: 5; }
-.flex-6  { order: 6; }
-.flex-7  { order: 7; }
-.flex-8  { order: 8; }
-.flex-9  { order: 9; }
-.flex-10 { order: 10; }
+.flx-1  { order: 1; }
+.flx-2  { order: 2; }
+.flx-3  { order: 3; }
+.flx-4  { order: 4; }
+.flx-5  { order: 5; }
+.flx-6  { order: 6; }
+.flx-7  { order: 7; }
+.flx-8  { order: 8; }
+.flx-9  { order: 9; }
+.flx-10 { order: 10; }
