--- a/src/less/utilities/grid-responsive.less
+++ b/src/less/utilities/grid-responsive.less
@@ -16,51 +16,51 @@
     
     // flex layout
 
-    .@{bpPrefix}--flex-wrap        { .flex-wrap; }
-    .@{bpPrefix}--flex-noWrap      { .flex-noWrap; }
-    .@{bpPrefix}--flex-wrapReverse { .flex-wrapReverse; }
+    .@{bpPrefix}--flx-wrap        { .flx-wrap; }
+    .@{bpPrefix}--flx-noWrap      { .flx-noWrap; }
+    .@{bpPrefix}--flx-wrapReverse { .flx-wrapReverse; }
                               
-    .@{bpPrefix}--flex-directionRow           { .flex-directionRow; }
-    .@{bpPrefix}--flex-directionRowReverse    { .flex-directionRowReverse; }
-    .@{bpPrefix}--flex-directionColumn        { .flex-directionColumn; }
-    .@{bpPrefix}--flex-directionColumnReverse { .flex-directionColumnReverse; }
+    .@{bpPrefix}--flx-directionRow           { .flx-directionRow; }
+    .@{bpPrefix}--flx-directionRowReverse    { .flx-directionRowReverse; }
+    .@{bpPrefix}--flx-directionColumn        { .flx-directionColumn; }
+    .@{bpPrefix}--flx-directionColumnReverse { .flx-directionColumnReverse; }
 
-    .@{bpPrefix}--flex-alignStart        { .flex-alignStart; }
-    .@{bpPrefix}--flex-alignEnd          { .flex-alignEnd; }
-    .@{bpPrefix}--flex-alignCenter       { .flex-alignCenter; }
-    .@{bpPrefix}--flex-alignBaseline     { .flex-alignBaseline; }
-    .@{bpPrefix}--flex-aligncontentStart { .flex-alignContentStart; }
-    .@{bpPrefix}--flex-alignContentEnd   { .flex-alignContentEnd; }
+    .@{bpPrefix}--flx-alignStart        { .flx-alignStart; }
+    .@{bpPrefix}--flx-alignEnd          { .flx-alignEnd; }
+    .@{bpPrefix}--flx-alignCenter       { .flx-alignCenter; }
+    .@{bpPrefix}--flx-alignBaseline     { .flx-alignBaseline; }
+    .@{bpPrefix}--flx-aligncontentStart { .flx-alignContentStart; }
+    .@{bpPrefix}--flx-alignContentEnd   { .flx-alignContentEnd; }
 
-    .@{bpPrefix}--flex-alignContentCenter       { .flex-alignContentCenter; }
-    .@{bpPrefix}--flex-alignContentSpaceBetween { .flex-alignContentSpaceBetween; }
-    .@{bpPrefix}--flex-alignContentSpaceAround  { .flex-alignContentSpaceAround; }
+    .@{bpPrefix}--flx-alignContentCenter       { .flx-alignContentCenter; }
+    .@{bpPrefix}--flx-alignContentSpaceBetween { .flx-alignContentSpaceBetween; }
+    .@{bpPrefix}--flx-alignContentSpaceAround  { .flx-alignContentSpaceAround; }
     
-    .@{bpPrefix}--flex-alignSelfStretch  { .flex-alignSelfStretch; }
-    .@{bpPrefix}--flex-alignSelfStart    { .flex-alignSelfStart; }
-    .@{bpPrefix}--flex-alignSelfEnd      { .flex-alignSelfEnd; }
-    .@{bpPrefix}--flex-alignSelfCenter   { .flex-alignSelfCenter; }
-    .@{bpPrefix}--flex-alignSelfBaseline { .flex-alignSelfBaseline; }
+    .@{bpPrefix}--flx-alignSelfStretch  { .flx-alignSelfStretch; }
+    .@{bpPrefix}--flx-alignSelfStart    { .flx-alignSelfStart; }
+    .@{bpPrefix}--flx-alignSelfEnd      { .flx-alignSelfEnd; }
+    .@{bpPrefix}--flx-alignSelfCenter   { .flx-alignSelfCenter; }
+    .@{bpPrefix}--flx-alignSelfBaseline { .flx-alignSelfBaseline; }
 
 
-    .@{bpPrefix}--flex-justifyStart        { .flex-justifyStart; }
-    .@{bpPrefix}--flex-justifyEnd          { .flex-justifyEnd; }
-    .@{bpPrefix}--flex-justifyCenter       { .flex-justifyCenter; }
-    .@{bpPrefix}--flex-justifySpaceBetween { .flex-justifySpaceBetween; }
-    .@{bpPrefix}--flex-justifySpaceAround  { .flex-justifySpaceAround; }
+    .@{bpPrefix}--flx-justifyStart        { .flx-justifyStart; }
+    .@{bpPrefix}--flx-justifyEnd          { .flx-justifyEnd; }
+    .@{bpPrefix}--flx-justifyCenter       { .flx-justifyCenter; }
+    .@{bpPrefix}--flx-justifySpaceBetween { .flx-justifySpaceBetween; }
+    .@{bpPrefix}--flx-justifySpaceAround  { .flx-justifySpaceAround; }
 
     // flex order
 
-    .@{bpPrefix}--flex-1  { .flex-1; }
-    .@{bpPrefix}--flex-2  { .flex-2; }
-    .@{bpPrefix}--flex-3  { .flex-3; }
-    .@{bpPrefix}--flex-4  { .flex-4; }
-    .@{bpPrefix}--flex-5  { .flex-5; }
-    .@{bpPrefix}--flex-6  { .flex-6; }
-    .@{bpPrefix}--flex-7  { .flex-7; }
-    .@{bpPrefix}--flex-8  { .flex-8; }
-    .@{bpPrefix}--flex-9  { .flex-9; }
-    .@{bpPrefix}--flex-10 { .flex-10; }
+    .@{bpPrefix}--flx-1  { .flx-1; }
+    .@{bpPrefix}--flx-2  { .flx-2; }
+    .@{bpPrefix}--flx-3  { .flx-3; }
+    .@{bpPrefix}--flx-4  { .flx-4; }
+    .@{bpPrefix}--flx-5  { .flx-5; }
+    .@{bpPrefix}--flx-6  { .flx-6; }
+    .@{bpPrefix}--flx-7  { .flx-7; }
+    .@{bpPrefix}--flx-8  { .flx-8; }
+    .@{bpPrefix}--flx-9  { .flx-9; }
+    .@{bpPrefix}--flx-10 { .flx-10; }
 
 }
 
