--- a/src/less/utilities/layout-base.less
+++ b/src/less/utilities/layout-base.less
@@ -113,10 +113,10 @@
 
 // overflow
 
-.ovrfl-x-hidden { overflow-x: hidden !important; }
-.ovrfl-y-hidden { overflow-y: hidden !important; }
-.ovrfl-hidden   { overflow: hidden !important; }
-.ovrfl-visible  { overflow: visible !important; }
+.ofl-x-hidden { overflow-x: hidden !important; }
+.ofl-y-hidden { overflow-y: hidden !important; }
+.ofl-hidden   { overflow: hidden !important; }
+.ofl-visible  { overflow: visible !important; }
 
 // z-index
 
