--- a/src/less/utilities/layout-responsive.less
+++ b/src/less/utilities/layout-responsive.less
@@ -83,10 +83,10 @@
 
     // overflow
 
-    .@{bpPrefix}--ovrfl-x-hidden { .ovrfl-x-hidden }
-    .@{bpPrefix}--ovrfl-y-hidden { .ovrfl-y-hidden; }
-    .@{bpPrefix}--ovrfl-hidden   { .ovrfl-hidden; }
-    .@{bpPrefix}--ovrfl-visible  { .ovrfl-visible; }
+    .@{bpPrefix}--ofl-x-hidden { .ofl-x-hidden }
+    .@{bpPrefix}--ofl-y-hidden { .ofl-y-hidden; }
+    .@{bpPrefix}--ofl-hidden   { .ofl-hidden; }
+    .@{bpPrefix}--ofl-visible  { .ofl-visible; }
 
     // z-index
 
