--- a/src/less/utilities/opacity-base.less
+++ b/src/less/utilities/opacity-base.less
@@ -1,12 +1,12 @@
-/** opacity-base.less */
+/** op-base.less */
 
-.opacity-full { opacity: 1 !important; }
-.opacity-9    { opacity: .9 !important; }
-.opacity-8    { opacity: .8 !important; }
-.opacity-7    { opacity: .7 !important; }
-.opacity-6    { opacity: .6 !important; }
-.opacity-5    { opacity: .5 !important; }
-.opacity-4    { opacity: .4 !important; }
-.opacity-3    { opacity: .3 !important; }
-.opacity-2    { opacity: .2 !important; }
-.opacity-1    { opacity: .1 !important; }
+.op-full { opacity: 1 !important; }
+.op-9    { opacity: .9 !important; }
+.op-8    { opacity: .8 !important; }
+.op-7    { opacity: .7 !important; }
+.op-6    { opacity: .6 !important; }
+.op-5    { opacity: .5 !important; }
+.op-4    { opacity: .4 !important; }
+.op-3    { opacity: .3 !important; }
+.op-2    { opacity: .2 !important; }
+.op-1    { opacity: .1 !important; }
