--- a/src/less/utilities/opacity-interactive.less
+++ b/src/less/utilities/opacity-interactive.less
@@ -1,12 +1,12 @@
-/** opacity-interactive.less */
+/** op-interactive.less */
 
-.hvr--opacity-full:hover { .opacity-full; }
-.hvr--opacity-9:hover    { .opacity-9; }
-.hvr--opacity-8:hover    { .opacity-8; }
-.hvr--opacity-7:hover    { .opacity-7; }
-.hvr--opacity-6:hover    { .opacity-6; }
-.hvr--opacity-5:hover    { .opacity-5; }
-.hvr--opacity-4:hover    { .opacity-4; }
-.hvr--opacity-3:hover    { .opacity-3; }
-.hvr--opacity-2:hover    { .opacity-2; }
-.hvr--opacity-1:hover    { .opacity-1; }
+.hvr--op-full:hover { .op-full; }
+.hvr--op-9:hover    { .op-9; }
+.hvr--op-8:hover    { .op-8; }
+.hvr--op-7:hover    { .op-7; }
+.hvr--op-6:hover    { .op-6; }
+.hvr--op-5:hover    { .op-5; }
+.hvr--op-4:hover    { .op-4; }
+.hvr--op-3:hover    { .op-3; }
+.hvr--op-2:hover    { .op-2; }
+.hvr--op-1:hover    { .op-1; }
