--- a/src/less/utilities/transition.less
+++ b/src/less/utilities/transition.less
@@ -1,5 +1,5 @@
 /** transition.less */
 
-.tween      { transition: all 200ms ease-out !important; }
-.tween-fast { transition: all 100ms ease-out !important; }
-.tween-slow { transition: all 400ms ease-out !important; }
+.trn      { transition: all 200ms ease-out !important; }
+.trn-fast { transition: all 100ms ease-out !important; }
+.trn-slow { transition: all 400ms ease-out !important; }
