--- a/src/less/utilities/typography-base.less
+++ b/src/less/utilities/typography-base.less
@@ -70,8 +70,8 @@
 
 // text decoration
 
-.tdcr-none      { text-decoration: none !important; }
-.tdcr-underline { text-decoration: underline !important; }
+.tdr-none      { text-decoration: none !important; }
+.tdr-underline { text-decoration: underline !important; }
 
 // list styles
 
