--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -23,12 +23,12 @@
     <body class="noJs" yoi-environment="desktop" {{ pageRewind }} {{ scrollKeys }} {{ scrollProgress }} >
         <script>document.body.className='js';</script>
         <div class="center flexGrid p-tb-2 l--m-b-8">
-            <div class="w-1-5 m--w-2-3 flex-alignStart">
+            <div class="w-1-5 m--w-2-3 flx-alignStart">
                 <a href="{{ site.github.url }}/">
                     <img class="h-4 m--h-6 m-tb-1 m--m-tb-2" src="{{ site.github.url }}/assets/img/yoi-logo.svg" />
                 </a>
             </div>
-            <div class="w-4-5 m--w-1-3 flex-alignEnd">
+            <div class="w-4-5 m--w-1-3 flx-alignEnd">
                 <div class="m-t-1">
                     <a href="https://github.com/yoshino-digital/yoi/" class="btn btn--medium btn--subtle">GitHub</a>
                     <a href="https://github.com/yoshino-digital/yoi/releases/latest" class="btn btn--medium btn--subtle">
@@ -43,10 +43,10 @@
             </div>
         </div>
         <div class="center flexGrid">
-            <nav id="menu" class="w-1-1 l--w-1-5 m-t-9 flex-2 l--flex-1">
+            <nav id="menu" class="w-1-1 l--w-1-5 m-t-9 flx-2 l--flx-1">
                 {% include menu.html %}
             </nav>
-            <article class="article w-1-1 l--w-4-5 l--p-l-10 flex-1 l--flex-2">
+            <article class="article w-1-1 l--w-4-5 l--p-l-10 flx-1 l--flx-2">
                 {{ content }}
                 {% include pagefooter.html %}
             </article>
