--- a/src/less/utilities/interface.less
+++ b/src/less/utilities/interface.less
@@ -11,8 +11,15 @@
 
 // scroll
 
-.scrl-x { overflow: hidden !important; overflow-x: auto !important; }
-.scrl-y { overflow: hidden !important; overflow-y: auto !important; }
+.scrl-x,
+.scrl-y {
+    overflow: hidden !important;
+    -webkit-overflow-scrolling: touch !important;
+    -ms-overflow-style: -ms-autohiding-scrollbar !important;
+}
+
+.scrl-x { overflow-x: auto !important; }
+.scrl-y { overflow-y: auto !important; }
 
 // focus
 
