--- a/src/less/utilities/fx.less
+++ b/src/less/utilities/fx.less
@@ -26,26 +26,8 @@
 }
 
 [class*='fx-'].fx-scale-down-initial {
+    opacity: 0;
     transform: scale(2);
-}
-
-// fx modifiers
-// ============
-
-// duration
-
-.fx-fast {
-    animation-duration: 0.5s * @animationDuration;
-}
-
-.fx-slow {
-    animation-duration: 2s * @animationDuration;
-}
-
-// off
-
-.fx-off {
-    animation-name: none !important;
 }
 
 // individual fx classes
@@ -143,6 +125,25 @@
 
 .fx-pulse {
     animation-name: yoi-pulse;
+}
+
+// fx modifiers
+// ============
+
+// duration
+
+.fx-fast {
+    animation-duration: 0.5s * @animationDuration;
+}
+
+.fx-slow {
+    animation-duration: 2s * @animationDuration;
+}
+
+// off
+
+.fx-off {
+    animation-name: none !important;
 }
 
 // keyframes
